--- a/trunk/AcademicCrawler/AcademicCrawler/AcademicCrawler.vcproj
+++ b/trunk/AcademicCrawler/AcademicCrawler/AcademicCrawler.vcproj
@@ -38,7 +38,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;..SDKs\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
+				AdditionalIncludeDirectories="&quot;..\SDKs\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
 				PreprocessorDefinitions="UNICODE,WIN32,QT_NO_DEBUG,NDEBUG,QT_CORE_LIB"
 				RuntimeLibrary="2"
 				TreatWChar_tAsBuiltInType="false"
@@ -110,7 +110,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;..SDKs\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
+				AdditionalIncludeDirectories="&quot;..\SDKs\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
 				PreprocessorDefinitions="UNICODE,WIN32,QT_CORE_LIB"
 				RuntimeLibrary="3"
 				TreatWChar_tAsBuiltInType="false"
@@ -222,6 +222,18 @@
 			SourceControlFiles="false"
 			>
 			<File
+				RelativePath=".\GeneratedFiles\Release\moc_AC_MainWindow.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\GeneratedFiles\Debug\moc_AC_MainWindow.cpp"
 				>
 				<FileConfiguration
@@ -241,25 +253,6 @@
 						Name="VCCLCompilerTool"
 						ObjectFile="$(IntDir)\$(InputName)1.obj"
 						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\GeneratedFiles\Release\moc_AC_MainWindow.cpp"
-				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
 					/>
 				</FileConfiguration>
 			</File>
