--- a/trunk/AcademicCrawler/AcademicCrawlerGUI/AcademicCrawlerGUI.vcproj
+++ b/trunk/AcademicCrawler/AcademicCrawlerGUI/AcademicCrawlerGUI.vcproj
@@ -55,7 +55,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtMain.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtCore4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtGui4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtNetwork4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtWebKit4.lib ..\release\AcademicCrawler.lib"
+				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtMain.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtCore4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtGui4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtNetwork4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtWebKit4.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				AdditionalLibraryDirectories="$(QTDIR)\lib"
 				GenerateDebugInformation="false"
@@ -127,7 +127,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtMaind.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtCored4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtGuid4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtNetworkd4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtWebKitd4.lib ..\debug\AcademicCrawler.lib"
+				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtMaind.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtCored4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtGuid4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtNetworkd4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtWebKitd4.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				AdditionalLibraryDirectories="$(QTDIR)\lib"
 				GenerateDebugInformation="true"
@@ -190,7 +190,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing AC_MainWindow.h..."
-						CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  -DUNICODE -DWIN32 -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -I&quot;.\..\SDKs\Qt\Qt-4.6.2\include\.&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)\.&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
+						CommandLine="$(QTDIR)\bin\moc.exe  -DUNICODE -DWIN32 -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -I&quot;.\..\SDKs\Qt\Qt-4.6.2\include&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
 						AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;.\AC_MainWindow.h"
 						Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;"
 					/>
@@ -201,7 +201,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing AC_MainWindow.h..."
-						CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;  -DUNICODE -DWIN32 -DQT_CORE_LIB -I&quot;.\..\SDKs\Qt\Qt-4.6.2\include\.&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)\.&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
+						CommandLine="$(QTDIR)\bin\moc.exe  -DUNICODE -DWIN32 -DQT_CORE_LIB -I&quot;.\..\SDKs\Qt\Qt-4.6.2\include&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
 						AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;.\AC_MainWindow.h"
 						Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;"
 					/>
@@ -222,6 +222,18 @@
 			SourceControlFiles="false"
 			>
 			<File
+				RelativePath=".\GeneratedFiles\Release\moc_AC_MainWindow.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\GeneratedFiles\Debug\moc_AC_MainWindow.cpp"
 				>
 				<FileConfiguration
@@ -241,25 +253,6 @@
 						Name="VCCLCompilerTool"
 						ObjectFile="$(IntDir)\$(InputName)1.obj"
 						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\GeneratedFiles\Release\moc_AC_MainWindow.cpp"
-				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
 					/>
 				</FileConfiguration>
 			</File>
