--- a/trunk/AcademicCrawler-src/AcademicCrawlerGUI/AcademicCrawlerGUI.vcproj
+++ b/trunk/AcademicCrawler-src/AcademicCrawlerGUI/AcademicCrawlerGUI.vcproj
@@ -18,7 +18,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)..\AcademicCrawler-bin\$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)..\AcademicCrawler-bin\temp\$(ProjectName)\$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
@@ -38,7 +38,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;..\SDKs\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
 				PreprocessorDefinitions="UNICODE,WIN32,QT_NO_DEBUG,NDEBUG,QT_CORE_LIB"
 				RuntimeLibrary="2"
 				TreatWChar_tAsBuiltInType="false"
@@ -55,7 +55,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtMain.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtCore4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtGui4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtNetwork4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtWebKit4.lib"
+				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtMain.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtCore4.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtGui4.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtNetwork4.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtWebKit4.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				AdditionalLibraryDirectories="$(QTDIR)\lib"
 				GenerateDebugInformation="false"
@@ -89,7 +89,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)..\AcademicCrawler-bin\$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)..\AcademicCrawler-bin\temp\$(ProjectName)\$(ConfigurationName)"
 			ConfigurationType="1"
 			>
 			<Tool
@@ -110,7 +110,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;..\SDKs\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;"
 				PreprocessorDefinitions="UNICODE,WIN32,QT_CORE_LIB"
 				RuntimeLibrary="3"
 				TreatWChar_tAsBuiltInType="false"
@@ -127,7 +127,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtMaind.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtCored4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtGuid4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtNetworkd4.lib ..\SDKs\Qt\Qt-4.6.2\lib\QtWebKitd4.lib"
+				AdditionalDependencies="gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib advapi32.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtMaind.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtCored4.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtGuid4.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtNetworkd4.lib ..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\lib\QtWebKitd4.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				AdditionalLibraryDirectories="$(QTDIR)\lib"
 				GenerateDebugInformation="true"
@@ -190,7 +190,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing AC_MainWindow.h..."
-						CommandLine="$(QTDIR)\bin\moc.exe  -DUNICODE -DWIN32 -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -I&quot;.\..\SDKs\Qt\Qt-4.6.2\include&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
+						CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;   -DUNICODE -DWIN32 -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB  -I&quot;.\..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\include\.&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)\.&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
 						AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;.\AC_MainWindow.h"
 						Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;"
 					/>
@@ -201,7 +201,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing AC_MainWindow.h..."
-						CommandLine="$(QTDIR)\bin\moc.exe  -DUNICODE -DWIN32 -DQT_CORE_LIB -I&quot;.\..\SDKs\Qt\Qt-4.6.2\include&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
+						CommandLine="&quot;$(QTDIR)\bin\moc.exe&quot;   -DUNICODE -DWIN32 -DQT_CORE_LIB  -I&quot;.\..\..\AcademicCrawler-sdk\Qt\Qt-4.6.2\include\.&quot; -I&quot;.\GeneratedFiles\$(ConfigurationName)\.&quot; &quot;.\AC_MainWindow.h&quot; -o &quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;&#x0D;&#x0A;"
 						AdditionalDependencies="&quot;$(QTDIR)\bin\moc.exe&quot;;.\AC_MainWindow.h"
 						Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_AC_MainWindow.cpp&quot;"
 					/>
